--- a/rust-nn/Cargo.toml
+++ b/rust-nn/Cargo.toml
@@ -8,4 +8,7 @@ once_cell = "1.18.0"
 rand = "0.8.4"
 flate2 = "1.0"
 byteorder = "1.4"
-ndarray = "0.16.0"
+ndarray = { version = "0.16.0", default-features = false, features = [
+    "rayon",
+    "matrixmultiply-threading",
+] }
